added keystore file

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -54,3 +54,8 @@ expo.webp.animated=false
 
 # Enable network inspector
 EX_DEV_CLIENT_NETWORK_INSPECTOR=true
+
+MYAPP_UPLOAD_STORE_FILE=store-app-key.keystore
+MYAPP_UPLOAD_KEY_ALIAS=store-app-alias
+MYAPP_UPLOAD_STORE_PASSWORD=android
+MYAPP_UPLOAD_KEY_PASSWORD=android
